--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -140,7 +140,8 @@ if (NOT USING_OLD_VISUAL_STUDIO_COMPILER)
    add_example(dnn_imagenet_train_ex)
    add_example(dnn_semantic_segmentation_train_ex)
    add_example(dnn_metric_learning_on_images_ex)
-   add_example(dnn_dcgan_ex)
+   add_example(dnn_dcgan_cifar_train_ex)
+   add_example(dnn_dcgan_train_ex)
 endif()
 
 
